syntax = "proto3";

package com.road.yishi.proto.bubble;

message ChangeBubbleInfoMsg {
  string bubbleInfo = 1;
  int32 op = 2;
}
